<resources>
    <!--- General Information -->
    <string name="app_name">Time Tracker</string>
    <string name="GenerateReports">Generate Reports</string>
    <string name="TasksRunning">Tasks Running</string>
    <string name="GotoReports">View Reports</string>

    <!--- Titles for Contextual Menu -->
    <string name="OrderBy">Order By</string>
    <string name="GenerateReport">Generate Report</string>
    <string name="SaveTree">Save data</string>
    <string name="Info">Info</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>

    <!--- Options SortBy ListView Projects -->
    <string-array name="orders_projects">
        <item>Alphabetically</item>
        <item>Recently</item>
    </string-array>

    <!--- Options SortBy ListView Activities -->
    <string-array name="orders_activities">
        <item>Alphabetically</item>
        <item>Recently</item>
        <item>By Type</item>
    </string-array>

    <!--- Options Languages Settings -->
    <string name="Language">Language:</string>
    <string name="LanguageText">To change the language between Spanish, Catalan or English, please change the System Language.</string>
    <string-array name="LanguagesArray">
        <item>English</item>
        <item>Spanish</item>
        <item>Catalan</item>
    </string-array>

    <string-array name="LanguagesCode">
        <item>en</item>
        <item>es</item>
        <item>ca</item>
    </string-array>
    <string name="DelaySeg">Delay Seconds: </string>
    <string name="DeleteALL">Delete all Configuration and Data </string>
    <string name="seg">seg</string>
    <string name="changes">Please restart the app to apply the changes</string>

    <!--- Create & Edit & Info Task / Project -->
    <string name="EditTask">Edit Task</string>
    <string name="EditProject">Edit Project</string>
    <string name="CreateTask">Create Task</string>
    <string name="CreateProject">Create Project</string>
    <string name="InfoTask">Task Information</string>
    <string name="InfoProject">Project Information</string>

    <string name="Preprogramada"> Pre-programmed:</string>
    <string name="DatePreprogramada"> Set a Date:</string>
    <string name="Limited"> Limited: </string>
    <string name="TimeLimited"> Time in Minutes:</string>

    <string name="Name">Name:</string>
    <string name="ProjectRoot">Project Root:</string>
    <string name="Description">Description:</string>
    <string name="StartDate">Start Date:</string>
    <string name="EndDate">End Date:</string>
    <string name="Duration">Duration:</string>
    <string name="NumberofIntervals">Nº Intervals:</string>
    <string name="NumberofTasks">Nº Tasks:</string>
    <string name="NumberofSubProjects">Nº SubProjects:</string>
    <string name="ConfirmChanges">OK</string>
    <string name="Create">Create</string>

    <string name="FullPathTitle"> Full Path:</string>

    <!--- Generate Reports -->
    <string name="ProjectReport">Project:</string>
    <string name="FormatReport">Format:</string>
    <string name="TypeReport">Type:</string>
    <string name="DateReport">Period:</string>
    <string name="StartDateReport">Start Date:</string>
    <string name="EndDateReport">End Date:</string>
    <string name="CreateBtnReport">CREATE</string>

    <!--- Options Format Generate Reports -->
    <string-array name="formatReports">
        <item>Web</item>
        <item>Text</item>
    </string-array>

    <!--- Options Type Generate Reports -->
    <string-array name="typeReports">
        <item>Basic</item>
        <item>Detailed</item>
    </string-array>

    <!--- Options Period Generate Reports -->
    <string-array name="dateReports">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last Week</item>
        <item>Last Week from Today</item>
        <item>Last Month</item>
        <item>Last Month from Today</item>
        <item>Last Year</item>
        <item>Last Year from Today</item>
        <item>Custom</item>
    </string-array>

    <!--- Reports Generate Automatically Periods -->
    <string name="TimeStart">00:00:00</string>
    <string name="TimeFinish">23:59:59</string>

    <!--- Empty ListView -->
    <string name="NoProjectsRoot">There are no projects created yet!</string>
    <string name="NoActivities">There are no activities created yet!</string>
    <string name="NoIntervals">There are no intervals in this task yet!</string>
    <string name="NoTasksRunning">There are no tasks running now!</string>
    <string name="NoReports">There are no reports created yet!</string>

    <!--- Intervals Information -->
    <string name="Duration_Interval">Duration</string>
    <string name="StartDateEndDate_Interval">Start Date / End Date</string>
    <string name="NumberofIntervals_Interval">Nº Intervals:</string>
    <string name="NumberofTasks_Running">Nº Tasks Running:</string>


    <!--- Info for TasksRunning -->
    <string name="Play">Play</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>

    <!--- Info for about -->
    <string name="info_about">This app has been developed by OGERICO team</string>


    <!--- Errors -->
    <string name="ErrorEmptyName"> Empty name is not allowed </string>
    <string name="GrantedPermission"> You grant write external storage permission. Please click again the "Create" button. </string>
    <string name="DeniedPermission"> You denied write external storage permission. Your report will not be generated </string>

    <!--- Transitions -->
    <string name="FabTransition"> fab_transition </string>

    <!--- Messages -->
    <string name="TreeSavedMSG">All data has been saved successfully!</string>
    <string name="AreTasksRunningTitle">Tasks Running</string>
    <string name="AreTasksRunning">There are some tasks running now. If you force close, all tasks will be stopped.</string>
    <string name="AreTasksRunningYES">Force Close and stop all tasks</string>
    <string name="AreTasksRunningNO">Cancel and go to Tasks Running</string>

    <string name="DeleteALLTitle">Delete all Configuration and Data</string>
    <string name="DeleteALLmsg">All data will be erased and the app will close. Are you sure you want to continue? (This operation cannot be undone)</string>
    <string name="DeleteALLYES">Yes</string>
    <string name="DeleteALLNO">No</string>

    <string name="items_selected">items selected</string>
    <string name="choose_order">Choose the order</string>

    <!--- Reports messages && Delete message && Share Message-->
    <string name="Reports">Reports</string>
    <string name="ReportsDelete">This report does not exist. Please, delete this entry!</string>
    <string name="DeleteQuestion">Delete?</string>
    <string name="DeleteEntry">Are you sure you want to delete this entry?</string>
    <string name="DeleteFile">Are you sure you want to delete this file?</string>
    <string name="DeleteProject">Are you sure you want to delete this project?</string>
    <string name="DeleteActivity">Are you sure you want to delete this activity?</string>
    <string name="Cancel">Cancel</string>
    <string name="ShareReport">Sharing report</string>
    <string name="SendReport">Sending report:</string>
    <string name="ShareFAB">SHARE</string>
</resources>
