<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ActivitiesList">

    <RelativeLayout
        android:id="@+id/obstructor"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:alpha="0.75"
        android:layout_height="match_parent"
        android:background="@color/grey_80"
        android:translationZ="2dp"
        android:clickable="true"
        android:focusable="true"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ToolBarTheme.ToolBarStyle"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Toolbar is the actual app bar with text and the action items -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/listViewReports"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:choiceMode="multipleChoiceModal">

    </ListView>

    <TextView
        android:id="@+id/emptyActivities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoActivities"
        android:layout_gravity="center"/>



    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|end|end"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:clickable="false"
        android:focusable="false"
        app:fabSize="normal"
        app:fab_addButtonColorNormal="@color/black"
        app:fab_addButtonColorPressed="@color/black_semi_transparent"
        app:fab_labelStyle="@style/menu_labels_style"
        android:transitionName="@string/FabTransition"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_folder"
            app:fab_colorNormal="@color/grey_20"
            app:fab_colorPressed="@color/light_grey"
            app:fab_title="@string/CreateProject"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_assignment"
            app:fab_colorNormal="@color/grey_20"
            app:fab_colorPressed="@color/light_grey"
            app:fab_title="@string/CreateTask"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</androidx.coordinatorlayout.widget.CoordinatorLayout>